--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-/* Set the background color for the entire page */
 body {
-    background-color: #1d1628; /* You can change this color to any valid CSS color */
+    background-color: #1d1628;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
+
