--- a/home.css
+++ b/home.css
@@ -64,3 +64,12 @@ canvas {
         left: 3vw;
     }
 }
+
+.script{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: calc(100% + 20px); /* Extend width by 20px */
+    height: calc(100% + 20px); /* Extend height by 20px */
+    overflow: auto; /* Enable scrolling if content exceeds window size */
+}
