--- a/home.css
+++ b/home.css
@@ -28,47 +28,28 @@ html, body {
 
 .image-container {
     position: relative;
-    width: 100vw; /* Adjusted width */
-    height: 100vh; /* Adjusted height */
-    overflow: hidden; /* Clip images that exceed container size */
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
-.center-image {
-    width: 100vw; /* Adjusted width */
-    height: 100vh; /* Adjusted height */
-    object-fit: contain;
-    display: block;
-    opacity: 1;
-}
-
-
-.box-container {
-    position: absolute;
-    left: 7%;
-    width: 67%; /* Adjusted width */
-    height: 57vh; /* Adjusted height */
-    object-fit: fill;
-    display: block;
-    opacity: 1;
-    padding-bottom: 7%; /* Adjusted height as a percentage of the parent container */
-    padding-right: 3%;
-    padding-left: 3%;
-    background-color: #1d1628;
-    z-index: -1; /* Place behind the image */
-}
-
-.overlay-image {
-    position: absolute;
-    top: 0;
-    left: 0;
+.center-image, .overlay-image {
     width: 100%;
     height: 100%;
-    object-fit: contain;
-    opacity: 0.2;
+    max-width: 100%; /* Ensure image does not exceed container */
+    max-height: 100%; /* Ensure image does not exceed container */
+    display: block;
+    object-fit: contain; /* Preserve aspect ratio and fit within container */
+    opacity: 1;
 }
+.overlay-image {
+    position: absolute;
+    opacity: .2;
+}
+
 
 .backdrop {
     position: absolute;
@@ -78,6 +59,13 @@ html, body {
     height: calc(100% + 50px); /* Extend height by 20px */
     overflow: auto; /* Enable scrolling if content exceeds window size */
 }
+
+.box-container {
+    position: absolute;
+    background-color: #1d1628;
+    z-index: -1; /* Place behind the image */
+}
+
 
 
 
@@ -89,15 +77,7 @@ html, body {
     .overlay-image {
         object-fit: none;
     }
-    .box-container {
-        position: absolute;
-        left: 18%;
-        width: 92vw; /* Adjusted width as a percentage of the parent container */
-        height: 43%;
-        padding-bottom: 3%; /* Adjusted height as a percentage of the parent container */
-        padding-right: 3%;
-        padding-left: 3%;
-    }
+
         .center-image {
         object-fit:none; 
     }
@@ -117,16 +97,7 @@ html, body {
     .overlay-image {
         scale: 400%;
     }
-    .box-container {
-        position: absolute;
-        left: 5%;
-        min-width: 95vw; /* Adjusted width as a percentage of the parent container */
-        min-height: 68vh;
-        padding-bottom: 3%; /* Adjusted height as a percentage of the parent container */
-        padding-right: 3%;
-        padding-left: 3%;
 
-    }
     .center-image {
         object-fit:none; 
     }
