--- a/home.css
+++ b/home.css
@@ -28,15 +28,13 @@ html, body {
 
 .image-container {
     position: relative;
-    width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
 }
 
-.center-image, .overlay-image {
+.center-image, .overlay-image, .redlines {
     width: 100%;
     height: 100%;
     max-width: 100%; /* Ensure image does not exceed container */
@@ -62,17 +60,60 @@ html, body {
 .site-box{
     flex: inherit;
     padding-bottom: 44%;
-    width: 88%;
+    width: 93%;
     position: absolute;
     background-color: #1d1628;;
     z-index: -1;
 }
 
 
-/* Tablet */
+/*Telly Moving Parts*/
+.redlines, .fm-pointer, .btm-pointer, .static-switches {
+    position: absolute;
+}
+
+.fm-pointer{
+    z-index: 0;
+    left: 87.2%;
+    height: 3%;
+    width: 3%;
+}
+
+.btm-pointer{
+    z-index: 2;
+    left: 48.2%;
+    top: 88.1%;
+    width: auto;
+    height: auto;
+}
+
+.btm-tuner {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+}
+
+
+.redlines{
+    z-index: 2;
+    opacity: 0.8;
+}
+
+.btm-tuner-static{
+    visibility: hidden;
+    position: absolute;
+}
+
+.static-switches {
+    width: 100%;
+}
+
+
+
+/* Tablet 
 @media (min-width: 768px) and (max-width: 1024px) {
     .center-image-container {
-        width: 160vw; /* Adjusted width */
+        width: 160vw; /* Adjusted width 
     }
     .overlay-image {
         object-fit: none;
@@ -81,37 +122,45 @@ html, body {
         .center-image {
         object-fit:none; 
     }
-}
+}*/
 
 /* Mobile */
 @media (max-width: 767px) {
-    .center-image-container {
-        width: 113vw; /* Adjusted width */
-        height: 160vh; /* Adjusted height */
-    }
-    .center-image {
-        max-width: 466vw; /* Adjusted width */
-        max-height: 100vh; /* Adjusted height */
-        display: block;
-    }
-    .overlay-image {
-        object-fit: none;
-    }
 
-    .center-image {
-        object-fit:none; 
-    }
+.center-image, .overlay-image {
+    width: 400%;
+    height: 100%;
+    max-width: 400%; /* Ensure image does not exceed container */
+    max-height: 400%; /* Ensure image does not exceed container */
+    display: block;
+    object-fit: fill; /* Preserve aspect ratio and fit within container */
+}
     
     .site-box{
-            min-height: calc(100% - 104vh);
-            width: 100%;
+        height: 68%;
+        width: 100%;
+        padding-bottom: 0%;
     }
     
+    .btm-tuner-static{
+        visibility: visible;
+    }
+
+    .btm-pointer, .btm-tuner, .fm-pointer, .redlines, .static-switches {
+        visibility: hidden;
+    }
 }
 
 @media (max-width: 344px){
-        .site-box{
-            min-height: calc(100% - 116vh);
-            width: 100%;
+    .center-image, .overlay-image, .btm-tuner-static, .static-switches {
+        visibility: hidden
+    }
+    .site-box{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        padding-bottom: 10%;
     }
 }
