--- a/home.css
+++ b/home.css
@@ -73,13 +73,18 @@ html, body {
 }
 
 iframe {
-    width: 62%;
-    height: 86%;
-    padding-left: 20%;
     opacity: 0;
     transition: opacity 1s ease; /* Fade in transition */
     pointer-events: none;
     z-index: 1;
+    flex: inherit;
+    width: 88%;
+    height: 69%;
+    padding-left: 2%;
+    position: absolute;
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    display: flex;
+    top: 8%;
 }
 
 .exit-vid {
@@ -135,7 +140,7 @@ iframe {
     left: -1%;
     bottom: 9%;
     display: none;
-    z-index: 0;
+    z-index: -1;
 }
 
 
@@ -223,15 +228,21 @@ iframe {
     }
     
     iframe{
-        height: 89%;
-        width: 100%;
+        height: 79%;
+        width: 201%;
+        padding-left: 30%;
+    }
+    
+    .exit-vid{
+        top: 4%;
+        left: 3%;
     }
     
     .head-float {
-    max-width: 100%;
-    max-height: 100%;
-    left: 21%;
-    bottom: 11%;
+        max-width: 100%;
+        max-height: 100%;
+        left: 21%;
+        bottom: 11%;
     }
 
     .vid-load-in{
@@ -267,14 +278,14 @@ iframe {
     iframe {
     width: 82%;
     height: 16%;
-    background-color: rgba(255, 255, 255, 0);
+    z-index: 2;
     }
     
-        .head-float {
-    max-width: 100%;
-    max-height: 100%;
-    left: 1%;
-    bottom: 70%;
+    .head-float {
+        max-width: 100%;
+        max-height: 100%;
+        left: 1%;
+        bottom: 70%;
     }
 
     .vid-load-in{
@@ -289,6 +300,7 @@ iframe {
         width: 127%;
         left: -10%;
         bottom: 82%;
+        z-index: -1;
     }
     .exit-vid{
         top: 1%;
