--- a/home.css
+++ b/home.css
@@ -210,7 +210,7 @@ iframe {
         body {
             font-family: "Lato", sans-serif;
             font-weight: 10;
-            font-size: .85vw;
+            font-size: 1.26vw;
         }
         .about-me {
             z-index: 1;
@@ -248,7 +248,7 @@ iframe {
 /* Navigation Menu */
 .navigation-menu {
     position: absolute;
-    bottom: 41%;
+    bottom: 39%;
     left: 44.5%;
     transform: translateX(-50%);
     background-color: #2e003e; /* Dark purple background */
